k8s/apps/portainer/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portainer
  namespace: default
spec:
  ports:
  - name: port-9000
    port: 9000
    targetPort: 9000
  selector:
    app: portainer
