k8s/apps/portainer/portainer-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-ingress
  namespace: default
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`portainer.example.com`)
    services:
    - name: portainer
      port: 9000
  tls:
    certResolver: cloudflare
